# adventure

./: README.md  build.sh  com.github.william_andersson.Adventure.json  meson.build
data/: com.github.william_andersson.Adventure.desktop.in  com.github.william_andersson.Adventure.gschema.xml  com.github.william_andersson.Adventure.metainfo.xml.in  com.github.william_andersson.Adventure.service.in  meson.build
data/icons/: meson.build
demo/: compiler.py  demo.json  dialogs.py  events.py  locations.py  message.py  metadata.py  objects.py
po/: POTFILES.in  meson.build
src/: actions.py  adventure-cli.in  adventure.gresource.xml  adventure.in  cli.py  main.py  meson.build  parser.py  style.css  window.py  window.ui
